Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from Parser.y
-----------------------------------------------------------------------------

state 59 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parsePrograma -> Programa                   (0)
	Programa -> ListaFuncoes BlocoPrincipal            (1)
	Programa -> BlocoPrincipal                         (2)
	ListaFuncoes -> ListaFuncoes Funcao                (3)
	ListaFuncoes -> Funcao                             (4)
	Funcao -> TipoRet id '(' ParamFormais ')' BlocoPrincipal   (5)
	Funcao -> TipoRet id '(' ')' BlocoPrincipal        (6)
	TipoRet -> Tipo                                    (7)
	TipoRet -> void                                    (8)
	Tipo -> int                                        (9)
	Tipo -> double                                     (10)
	Tipo -> string                                     (11)
	ParamFormais -> ParamFormais ',' ParamFormal       (12)
	ParamFormais -> ParamFormal                        (13)
	ParamFormal -> Tipo id                             (14)
	BlocoPrincipal -> '{' Declaracoes ListaComandos '}'   (15)
	BlocoPrincipal -> '{' ListaComandos '}'            (16)
	BlocoPrincipal -> '{' '}'                          (17)
	Declaracoes -> Declaracoes Declaracao              (18)
	Declaracoes -> Declaracao                          (19)
	Declaracao -> Tipo ListaId ';'                     (20)
	ListaId -> ListaId ',' id                          (21)
	ListaId -> id                                      (22)
	Bloco -> '{' ListaComandos '}'                     (23)
	Bloco -> '{' '}'                                   (24)
	ListaComandos -> ListaComandos Comando             (25)
	ListaComandos -> Comando                           (26)
	Comando -> if '(' ExprL ')' Bloco else Bloco       (27)
	Comando -> if '(' ExprL ')' Bloco                  (28)
	Comando -> while '(' ExprL ')' Bloco               (29)
	Comando -> id '=' Expr ';'                         (30)
	Comando -> print '(' Expr ')' ';'                  (31)
	Comando -> print '(' litString ')' ';'             (32)
	Comando -> read '(' id ')' ';'                     (33)
	Comando -> return Expr ';'                         (34)
	Comando -> return ';'                              (35)
	Comando -> id '(' ListaExpr ')' ';'                (36)
	Comando -> id '(' ')' ';'                          (37)
	Expr -> Expr '+' Expr                              (38)
	Expr -> Expr '-' Expr                              (39)
	Expr -> Expr '*' Expr                              (40)
	Expr -> Expr '/' Expr                              (41)
	Expr -> '-' Expr                                   (42)
	Expr -> '(' Expr ')'                               (43)
	Expr -> litInt                                     (44)
	Expr -> litDouble                                  (45)
	Expr -> litString                                  (46)
	Expr -> id                                         (47)
	Expr -> id '(' ListaExpr ')'                       (48)
	Expr -> id '(' ')'                                 (49)
	ListaExpr -> ListaExpr ',' Expr                    (50)
	ListaExpr -> Expr                                  (51)
	ExprR -> Expr '==' Expr                            (52)
	ExprR -> Expr '/=' Expr                            (53)
	ExprR -> Expr '<' Expr                             (54)
	ExprR -> Expr '>' Expr                             (55)
	ExprR -> Expr '<=' Expr                            (56)
	ExprR -> Expr '>=' Expr                            (57)
	ExprL -> ExprL '&&' ExprL                          (58)
	ExprL -> ExprL '||' ExprL                          (59)
	ExprL -> '!' ExprL                                 (60)
	ExprL -> ExprR                                     (61)
	ExprL -> '(' ExprL ')'                             (62)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	int            { TINT }
	double         { TDOUBLE }
	string         { TSTRING }
	void           { TVOID }
	if             { IF }
	else           { ELSE }
	while          { WHILE }
	print          { PRINT }
	return         { RETURN }
	read           { READ }
	litInt         { LINT    $$ }
	litDouble      { LDOUBLE $$ }
	litString      { LSTRING $$ }
	id             { ID      $$ }
	'+'            { ADD }
	'-'            { SUB }
	'*'            { MUL }
	'/'            { DIV }
	'<'            { LT' }
	'>'            { GT' }
	'<='           { LE }
	'>='           { GE }
	'=='           { EQ' }
	'/='           { NEQ }
	'&&'           { AND }
	'||'           { OR }
	'!'            { NOT }
	'='            { ASSIGN }
	';'            { SEMI }
	','            { COMMA }
	'('            { LPAR }
	')'            { RPAR }
	'{'            { LBRACE }
	'}'            { RBRACE }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parsePrograma rule  0
	Programa        rules 1, 2
	ListaFuncoes    rules 3, 4
	Funcao          rules 5, 6
	TipoRet         rules 7, 8
	Tipo            rules 9, 10, 11
	ParamFormais    rules 12, 13
	ParamFormal     rule  14
	BlocoPrincipal  rules 15, 16, 17
	Declaracoes     rules 18, 19
	Declaracao      rule  20
	ListaId         rules 21, 22
	Bloco           rules 23, 24
	ListaComandos   rules 25, 26
	Comando         rules 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37
	Expr            rules 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49
	ListaExpr       rules 50, 51
	ExprR           rules 52, 53, 54, 55, 56, 57
	ExprL           rules 58, 59, 60, 61, 62

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parsePrograma -> . Programa                  (rule 0)

	int            shift, and enter state 6
	double         shift, and enter state 7
	string         shift, and enter state 8
	void           shift, and enter state 9
	'{'            shift, and enter state 12

	Programa       goto state 10
	ListaFuncoes   goto state 2
	Funcao         goto state 3
	TipoRet        goto state 4
	Tipo           goto state 5
	BlocoPrincipal goto state 11

State 1

	Programa -> . ListaFuncoes BlocoPrincipal           (rule 1)

	int            shift, and enter state 6
	double         shift, and enter state 7
	string         shift, and enter state 8
	void           shift, and enter state 9

	ListaFuncoes   goto state 2
	Funcao         goto state 3
	TipoRet        goto state 4
	Tipo           goto state 5

State 2

	Programa -> ListaFuncoes . BlocoPrincipal           (rule 1)
	ListaFuncoes -> ListaFuncoes . Funcao               (rule 3)

	int            shift, and enter state 6
	double         shift, and enter state 7
	string         shift, and enter state 8
	void           shift, and enter state 9
	'{'            shift, and enter state 12

	Funcao         goto state 26
	TipoRet        goto state 4
	Tipo           goto state 5
	BlocoPrincipal goto state 27

State 3

	ListaFuncoes -> Funcao .                            (rule 4)

	int            reduce using rule 4
	double         reduce using rule 4
	string         reduce using rule 4
	void           reduce using rule 4
	'{'            reduce using rule 4


State 4

	Funcao -> TipoRet . id '(' ParamFormais ')' BlocoPrincipal    (rule 5)
	Funcao -> TipoRet . id '(' ')' BlocoPrincipal       (rule 6)

	id             shift, and enter state 25


State 5

	TipoRet -> Tipo .                                   (rule 7)

	id             reduce using rule 7


State 6

	Tipo -> int .                                       (rule 9)

	id             reduce using rule 9


State 7

	Tipo -> double .                                    (rule 10)

	id             reduce using rule 10


State 8

	Tipo -> string .                                    (rule 11)

	id             reduce using rule 11


State 9

	TipoRet -> void .                                   (rule 8)

	id             reduce using rule 8


State 10

	%start_parsePrograma -> Programa .                  (rule 0)

	%eof           accept


State 11

	Programa -> BlocoPrincipal .                        (rule 2)

	%eof           reduce using rule 2


State 12

	BlocoPrincipal -> '{' . Declaracoes ListaComandos '}'    (rule 15)
	BlocoPrincipal -> '{' . ListaComandos '}'           (rule 16)
	BlocoPrincipal -> '{' . '}'                         (rule 17)

	int            shift, and enter state 6
	double         shift, and enter state 7
	string         shift, and enter state 8
	if             shift, and enter state 18
	while          shift, and enter state 19
	print          shift, and enter state 20
	return         shift, and enter state 21
	read           shift, and enter state 22
	id             shift, and enter state 23
	'}'            shift, and enter state 24

	Tipo           goto state 13
	Declaracoes    goto state 14
	Declaracao     goto state 15
	ListaComandos  goto state 16
	Comando        goto state 17

State 13

	Declaracao -> Tipo . ListaId ';'                    (rule 20)

	id             shift, and enter state 48

	ListaId        goto state 47

State 14

	BlocoPrincipal -> '{' Declaracoes . ListaComandos '}'    (rule 15)
	Declaracoes -> Declaracoes . Declaracao             (rule 18)

	int            shift, and enter state 6
	double         shift, and enter state 7
	string         shift, and enter state 8
	if             shift, and enter state 18
	while          shift, and enter state 19
	print          shift, and enter state 20
	return         shift, and enter state 21
	read           shift, and enter state 22
	id             shift, and enter state 23

	Tipo           goto state 13
	Declaracao     goto state 45
	ListaComandos  goto state 46
	Comando        goto state 17

State 15

	Declaracoes -> Declaracao .                         (rule 19)

	int            reduce using rule 19
	double         reduce using rule 19
	string         reduce using rule 19
	if             reduce using rule 19
	while          reduce using rule 19
	print          reduce using rule 19
	return         reduce using rule 19
	read           reduce using rule 19
	id             reduce using rule 19


State 16

	BlocoPrincipal -> '{' ListaComandos . '}'           (rule 16)
	ListaComandos -> ListaComandos . Comando            (rule 25)

	if             shift, and enter state 18
	while          shift, and enter state 19
	print          shift, and enter state 20
	return         shift, and enter state 21
	read           shift, and enter state 22
	id             shift, and enter state 23
	'}'            shift, and enter state 44

	Comando        goto state 43

State 17

	ListaComandos -> Comando .                          (rule 26)

	if             reduce using rule 26
	while          reduce using rule 26
	print          reduce using rule 26
	return         reduce using rule 26
	read           reduce using rule 26
	id             reduce using rule 26
	'}'            reduce using rule 26


State 18

	Comando -> if . '(' ExprL ')' Bloco else Bloco      (rule 27)
	Comando -> if . '(' ExprL ')' Bloco                 (rule 28)

	'('            shift, and enter state 42


State 19

	Comando -> while . '(' ExprL ')' Bloco              (rule 29)

	'('            shift, and enter state 41


State 20

	Comando -> print . '(' Expr ')' ';'                 (rule 31)
	Comando -> print . '(' litString ')' ';'            (rule 32)

	'('            shift, and enter state 40


State 21

	Comando -> return . Expr ';'                        (rule 34)
	Comando -> return . ';'                             (rule 35)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	';'            shift, and enter state 38
	'('            shift, and enter state 39

	Expr           goto state 32

State 22

	Comando -> read . '(' id ')' ';'                    (rule 33)

	'('            shift, and enter state 31


State 23

	Comando -> id . '=' Expr ';'                        (rule 30)
	Comando -> id . '(' ListaExpr ')' ';'               (rule 36)
	Comando -> id . '(' ')' ';'                         (rule 37)

	'='            shift, and enter state 29
	'('            shift, and enter state 30


State 24

	BlocoPrincipal -> '{' '}' .                         (rule 17)

	int            reduce using rule 17
	double         reduce using rule 17
	string         reduce using rule 17
	void           reduce using rule 17
	'{'            reduce using rule 17
	%eof           reduce using rule 17


State 25

	Funcao -> TipoRet id . '(' ParamFormais ')' BlocoPrincipal    (rule 5)
	Funcao -> TipoRet id . '(' ')' BlocoPrincipal       (rule 6)

	'('            shift, and enter state 28


State 26

	ListaFuncoes -> ListaFuncoes Funcao .               (rule 3)

	int            reduce using rule 3
	double         reduce using rule 3
	string         reduce using rule 3
	void           reduce using rule 3
	'{'            reduce using rule 3


State 27

	Programa -> ListaFuncoes BlocoPrincipal .           (rule 1)

	%eof           reduce using rule 1


State 28

	Funcao -> TipoRet id '(' . ParamFormais ')' BlocoPrincipal    (rule 5)
	Funcao -> TipoRet id '(' . ')' BlocoPrincipal       (rule 6)

	int            shift, and enter state 6
	double         shift, and enter state 7
	string         shift, and enter state 8
	')'            shift, and enter state 76

	Tipo           goto state 73
	ParamFormais   goto state 74
	ParamFormal    goto state 75

State 29

	Comando -> id '=' . Expr ';'                        (rule 30)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 39

	Expr           goto state 72

State 30

	Comando -> id '(' . ListaExpr ')' ';'               (rule 36)
	Comando -> id '(' . ')' ';'                         (rule 37)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 39
	')'            shift, and enter state 71

	Expr           goto state 69
	ListaExpr      goto state 70

State 31

	Comando -> read '(' . id ')' ';'                    (rule 33)

	id             shift, and enter state 68


State 32

	Comando -> return Expr . ';'                        (rule 34)
	Expr -> Expr . '+' Expr                             (rule 38)
	Expr -> Expr . '-' Expr                             (rule 39)
	Expr -> Expr . '*' Expr                             (rule 40)
	Expr -> Expr . '/' Expr                             (rule 41)

	'+'            shift, and enter state 63
	'-'            shift, and enter state 64
	'*'            shift, and enter state 65
	'/'            shift, and enter state 66
	';'            shift, and enter state 67


State 33

	Expr -> litInt .                                    (rule 44)

	'+'            reduce using rule 44
	'-'            reduce using rule 44
	'*'            reduce using rule 44
	'/'            reduce using rule 44
	'<'            reduce using rule 44
	'>'            reduce using rule 44
	'<='           reduce using rule 44
	'>='           reduce using rule 44
	'=='           reduce using rule 44
	'/='           reduce using rule 44
	'&&'           reduce using rule 44
	'||'           reduce using rule 44
	';'            reduce using rule 44
	','            reduce using rule 44
	')'            reduce using rule 44


State 34

	Expr -> litDouble .                                 (rule 45)

	'+'            reduce using rule 45
	'-'            reduce using rule 45
	'*'            reduce using rule 45
	'/'            reduce using rule 45
	'<'            reduce using rule 45
	'>'            reduce using rule 45
	'<='           reduce using rule 45
	'>='           reduce using rule 45
	'=='           reduce using rule 45
	'/='           reduce using rule 45
	'&&'           reduce using rule 45
	'||'           reduce using rule 45
	';'            reduce using rule 45
	','            reduce using rule 45
	')'            reduce using rule 45


State 35

	Expr -> litString .                                 (rule 46)

	'+'            reduce using rule 46
	'-'            reduce using rule 46
	'*'            reduce using rule 46
	'/'            reduce using rule 46
	'<'            reduce using rule 46
	'>'            reduce using rule 46
	'<='           reduce using rule 46
	'>='           reduce using rule 46
	'=='           reduce using rule 46
	'/='           reduce using rule 46
	'&&'           reduce using rule 46
	'||'           reduce using rule 46
	';'            reduce using rule 46
	','            reduce using rule 46
	')'            reduce using rule 46


State 36

	Expr -> id .                                        (rule 47)
	Expr -> id . '(' ListaExpr ')'                      (rule 48)
	Expr -> id . '(' ')'                                (rule 49)

	'+'            reduce using rule 47
	'-'            reduce using rule 47
	'*'            reduce using rule 47
	'/'            reduce using rule 47
	'<'            reduce using rule 47
	'>'            reduce using rule 47
	'<='           reduce using rule 47
	'>='           reduce using rule 47
	'=='           reduce using rule 47
	'/='           reduce using rule 47
	'&&'           reduce using rule 47
	'||'           reduce using rule 47
	';'            reduce using rule 47
	','            reduce using rule 47
	'('            shift, and enter state 62
	')'            reduce using rule 47


State 37

	Expr -> '-' . Expr                                  (rule 42)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 39

	Expr           goto state 61

State 38

	Comando -> return ';' .                             (rule 35)

	if             reduce using rule 35
	while          reduce using rule 35
	print          reduce using rule 35
	return         reduce using rule 35
	read           reduce using rule 35
	id             reduce using rule 35
	'}'            reduce using rule 35


State 39

	Expr -> '(' . Expr ')'                              (rule 43)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 39

	Expr           goto state 60

State 40

	Comando -> print '(' . Expr ')' ';'                 (rule 31)
	Comando -> print '(' . litString ')' ';'            (rule 32)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 59
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 39

	Expr           goto state 58

State 41

	Comando -> while '(' . ExprL ')' Bloco              (rule 29)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'!'            shift, and enter state 55
	'('            shift, and enter state 56

	Expr           goto state 52
	ExprR          goto state 53
	ExprL          goto state 57

State 42

	Comando -> if '(' . ExprL ')' Bloco else Bloco      (rule 27)
	Comando -> if '(' . ExprL ')' Bloco                 (rule 28)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'!'            shift, and enter state 55
	'('            shift, and enter state 56

	Expr           goto state 52
	ExprR          goto state 53
	ExprL          goto state 54

State 43

	ListaComandos -> ListaComandos Comando .            (rule 25)

	if             reduce using rule 25
	while          reduce using rule 25
	print          reduce using rule 25
	return         reduce using rule 25
	read           reduce using rule 25
	id             reduce using rule 25
	'}'            reduce using rule 25


State 44

	BlocoPrincipal -> '{' ListaComandos '}' .           (rule 16)

	int            reduce using rule 16
	double         reduce using rule 16
	string         reduce using rule 16
	void           reduce using rule 16
	'{'            reduce using rule 16
	%eof           reduce using rule 16


State 45

	Declaracoes -> Declaracoes Declaracao .             (rule 18)

	int            reduce using rule 18
	double         reduce using rule 18
	string         reduce using rule 18
	if             reduce using rule 18
	while          reduce using rule 18
	print          reduce using rule 18
	return         reduce using rule 18
	read           reduce using rule 18
	id             reduce using rule 18


State 46

	BlocoPrincipal -> '{' Declaracoes ListaComandos . '}'    (rule 15)
	ListaComandos -> ListaComandos . Comando            (rule 25)

	if             shift, and enter state 18
	while          shift, and enter state 19
	print          shift, and enter state 20
	return         shift, and enter state 21
	read           shift, and enter state 22
	id             shift, and enter state 23
	'}'            shift, and enter state 51

	Comando        goto state 43

State 47

	Declaracao -> Tipo ListaId . ';'                    (rule 20)
	ListaId -> ListaId . ',' id                         (rule 21)

	';'            shift, and enter state 49
	','            shift, and enter state 50


State 48

	ListaId -> id .                                     (rule 22)

	';'            reduce using rule 22
	','            reduce using rule 22


State 49

	Declaracao -> Tipo ListaId ';' .                    (rule 20)

	int            reduce using rule 20
	double         reduce using rule 20
	string         reduce using rule 20
	if             reduce using rule 20
	while          reduce using rule 20
	print          reduce using rule 20
	return         reduce using rule 20
	read           reduce using rule 20
	id             reduce using rule 20


State 50

	ListaId -> ListaId ',' . id                         (rule 21)

	id             shift, and enter state 108


State 51

	BlocoPrincipal -> '{' Declaracoes ListaComandos '}' .    (rule 15)

	int            reduce using rule 15
	double         reduce using rule 15
	string         reduce using rule 15
	void           reduce using rule 15
	'{'            reduce using rule 15
	%eof           reduce using rule 15


State 52

	Expr -> Expr . '+' Expr                             (rule 38)
	Expr -> Expr . '-' Expr                             (rule 39)
	Expr -> Expr . '*' Expr                             (rule 40)
	Expr -> Expr . '/' Expr                             (rule 41)
	ExprR -> Expr . '==' Expr                           (rule 52)
	ExprR -> Expr . '/=' Expr                           (rule 53)
	ExprR -> Expr . '<' Expr                            (rule 54)
	ExprR -> Expr . '>' Expr                            (rule 55)
	ExprR -> Expr . '<=' Expr                           (rule 56)
	ExprR -> Expr . '>=' Expr                           (rule 57)

	'+'            shift, and enter state 63
	'-'            shift, and enter state 64
	'*'            shift, and enter state 65
	'/'            shift, and enter state 66
	'<'            shift, and enter state 102
	'>'            shift, and enter state 103
	'<='           shift, and enter state 104
	'>='           shift, and enter state 105
	'=='           shift, and enter state 106
	'/='           shift, and enter state 107


State 53

	ExprL -> ExprR .                                    (rule 61)

	'&&'           reduce using rule 61
	'||'           reduce using rule 61
	')'            reduce using rule 61


State 54

	Comando -> if '(' ExprL . ')' Bloco else Bloco      (rule 27)
	Comando -> if '(' ExprL . ')' Bloco                 (rule 28)
	ExprL -> ExprL . '&&' ExprL                         (rule 58)
	ExprL -> ExprL . '||' ExprL                         (rule 59)

	'&&'           shift, and enter state 95
	'||'           shift, and enter state 96
	')'            shift, and enter state 101


State 55

	ExprL -> '!' . ExprL                                (rule 60)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'!'            shift, and enter state 55
	'('            shift, and enter state 56

	Expr           goto state 52
	ExprR          goto state 53
	ExprL          goto state 100

State 56

	Expr -> '(' . Expr ')'                              (rule 43)
	ExprL -> '(' . ExprL ')'                            (rule 62)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'!'            shift, and enter state 55
	'('            shift, and enter state 56

	Expr           goto state 98
	ExprR          goto state 53
	ExprL          goto state 99

State 57

	Comando -> while '(' ExprL . ')' Bloco              (rule 29)
	ExprL -> ExprL . '&&' ExprL                         (rule 58)
	ExprL -> ExprL . '||' ExprL                         (rule 59)

	'&&'           shift, and enter state 95
	'||'           shift, and enter state 96
	')'            shift, and enter state 97


State 58

	Comando -> print '(' Expr . ')' ';'                 (rule 31)
	Expr -> Expr . '+' Expr                             (rule 38)
	Expr -> Expr . '-' Expr                             (rule 39)
	Expr -> Expr . '*' Expr                             (rule 40)
	Expr -> Expr . '/' Expr                             (rule 41)

	'+'            shift, and enter state 63
	'-'            shift, and enter state 64
	'*'            shift, and enter state 65
	'/'            shift, and enter state 66
	')'            shift, and enter state 94


State 59

	Comando -> print '(' litString . ')' ';'            (rule 32)
	Expr -> litString .                                 (rule 46)

	'+'            reduce using rule 46
	'-'            reduce using rule 46
	'*'            reduce using rule 46
	'/'            reduce using rule 46
	')'            shift, and enter state 93
			(reduce using rule 46)



State 60

	Expr -> Expr . '+' Expr                             (rule 38)
	Expr -> Expr . '-' Expr                             (rule 39)
	Expr -> Expr . '*' Expr                             (rule 40)
	Expr -> Expr . '/' Expr                             (rule 41)
	Expr -> '(' Expr . ')'                              (rule 43)

	'+'            shift, and enter state 63
	'-'            shift, and enter state 64
	'*'            shift, and enter state 65
	'/'            shift, and enter state 66
	')'            shift, and enter state 92


State 61

	Expr -> Expr . '+' Expr                             (rule 38)
	Expr -> Expr . '-' Expr                             (rule 39)
	Expr -> Expr . '*' Expr                             (rule 40)
	Expr -> Expr . '/' Expr                             (rule 41)
	Expr -> '-' Expr .                                  (rule 42)

	'+'            reduce using rule 42
	'-'            reduce using rule 42
	'*'            reduce using rule 42
	'/'            reduce using rule 42
	'<'            reduce using rule 42
	'>'            reduce using rule 42
	'<='           reduce using rule 42
	'>='           reduce using rule 42
	'=='           reduce using rule 42
	'/='           reduce using rule 42
	'&&'           reduce using rule 42
	'||'           reduce using rule 42
	';'            reduce using rule 42
	','            reduce using rule 42
	')'            reduce using rule 42


State 62

	Expr -> id '(' . ListaExpr ')'                      (rule 48)
	Expr -> id '(' . ')'                                (rule 49)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 39
	')'            shift, and enter state 91

	Expr           goto state 69
	ListaExpr      goto state 90

State 63

	Expr -> Expr '+' . Expr                             (rule 38)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 39

	Expr           goto state 89

State 64

	Expr -> Expr '-' . Expr                             (rule 39)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 39

	Expr           goto state 88

State 65

	Expr -> Expr '*' . Expr                             (rule 40)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 39

	Expr           goto state 87

State 66

	Expr -> Expr '/' . Expr                             (rule 41)

	litInt         shift, and enter state 33
	litDouble      shift, and enter state 34
	litString      shift, and enter state 35
	id             shift, and enter state 36
	'-'            shift, and enter state 37
	'('            shift, and enter state 39

	Expr           goto state 86

State 67

	Comando -> return Expr ';' .                        (rule 34)

	if             reduce using rule 34
	while          reduce using rule 34
	print          reduce using rule 34
	return         reduce using rule 34
	read           reduce using rule 34
	id             reduce using rule 34
	'}'            reduce using rule 34


State 68

	Comando -> read '(' id . ')' ';'                    (rule 33)

	')'            shift, and enter state 85


State 69

	Expr -> Expr . '+' Expr                             (rule 38)
	Expr -> Expr . '-' Expr                             (rule 39)
	Expr -> Expr . '*' Expr                             (rule 40)
	Expr -> Expr . '/' Expr                             (rule 41)
	ListaExpr -> Expr .                                 (rule 51)

	'+'            shift, and enter state 63
	'-'            shift, and enter state 64
	'*'            shift, and enter state 65
	'/'            shift, and enter state 66
	','            reduce using rule 51
	')'            reduce using rule 51


State 70

	Comando -> id '(' ListaExpr . ')' ';'               (rule 36)
	ListaExpr -> ListaExpr . ',' Expr                   (rule 50)

	','            shift, and enter state 83
	')'            shift, and enter state 84


State 71

	Comando -> id '(' ')' . ';'                         (rule 37)

	';'            shift, and enter state 82


State 72

	Comando -> id '=' Expr . ';'                        (rule 30)
	Expr -> Expr . '+' Expr                             (rule 38)
	Expr -> Expr . '-' Expr                             (rule 39)
	Expr -> Expr . '*' Expr                             (rule 40)
	Expr -> Expr . '/' Expr                             (rule 41)

	'+'            shift, and enter state 63
	'-'            shift, and enter state 64
	'*'            shift, and enter state 65
	'/'            shift, and enter state 66
	';'            shift, and enter state 81


State 73

	ParamFormal -> Tipo . id                            (rule 14)

	id             shift, and enter state 80


State 74

	Funcao -> TipoRet id '(' ParamFormais . ')' BlocoPrincipal    (rule 5)
	ParamFormais -> ParamFormais . ',' ParamFormal      (rule 12)

	','            shift, and enter state 78
	')'            shift, and enter state 79


State 75

	ParamFormais -> ParamFormal .                       (rule 13)

	','            reduce using rule 13
	')'            reduce using rule 13


State 76

	Funcao -> TipoRet id '(' ')' . BlocoPrincipal       (rule 6)

	'{'            shift, and enter state 12
